--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
     <ban-junit4-imports.skip>false</ban-junit4-imports.skip>
     <hpi.bundledArtifacts>byte-buddy</hpi.bundledArtifacts>
     <hpi.strictBundledArtifacts>true</hpi.strictBundledArtifacts>
+    <ban-commons-lang-2.skip>false</ban-commons-lang-2.skip>
   </properties>
 
   <dependencyManagement>
